# project-yarn

./: .eslintignore  .eslintrc.components.json  .eslintrc.json  .gitignore  .lighthouserc.json  CONTRIBUTING.md  Cargo.toml  LARGE_FILES_CATALOG.md  LICENSE  README.md  index.html  models.config.json  models.example.toml  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  test-mermaid-diagrams.md  tsconfig.json  vite.config.ts  wdio.conf.js
.documents/completion-reports/: CR-001-20250802-accessibility-improvements-completion.md  CR-001-20250804-v0-design-system-integration-completion.md  CR-002-20250802-accessibility-testing-completion.md  CR-003-20250802-performance-monitoring-completion.md  CR-004-20250802-developer-experience-completion.md  CR-005-20250803-vite-duplicate-exports-fix-completion.md  CR-006-20250803-breadcrumb-navigation-completion.md  CR-007-20250803-navigation-v0-integration-completion.md  CR-008-20250803-panel-resize-handles-completion.md  CR-009-20250804-v0-design-system-recovery-completion.md
.documents/project-yarn-ui/: tailwind.config.ts
.documents/task-plan/: TP-001-20250802-frontend-enhancement-task-plan.md  TP-002-20250803-app-startup-fix-plan.md  TP-003-20250803-frontend-integration-display-plan.md  TP-004-20250803-vite-duplicate-exports-fix.md  TP-005-20250803-design-system-integration-plan.md  TP-006-20250804-v0-design-system-recovery-plan.md  TP-007-20250804-styling-single-source-truth-unification.md  TP-008-20250805-component-alignment-reference-ui.md  TP-009-20250811-import-path-alignment-reference-ui.md  TP-010-20250811-missing-ui-components-addition.md  TP-011-20250811-theme-provider-addition.md  TP-012-20250811-structural-simplification.md  TP-013-20250811-component-consolidation.md  (+6 more)
.github/: dependabot.yml
accessibility-audit/: accessibility-audit-framework.md  accessibility-audit-report.md  accessibility-remediation-guide.md
app/: globals.css
docs/: E2E_TESTING.md  MODEL_SETUP.md  MODEL_VERSIONING.md  TROUBLESHOOTING.md  UPDATE_PIPELINE.md  VISUAL_REGRESSION_TESTING.md  performance-benchmarks.md
local-model-sidecar/: Cargo.toml
local-model-sidecar/src/: main.rs
project-documentation/: Project Yarn FAQ.md  Project Yarn PRD_ Final.md  Project Yarn_ Agent-Ready Technical Strategy.md  Yarn Project Task Plan_.md
scripts/: README.md  check-accessibility-performance.js  ci-setup.js  cleanup-git-history-simple.ps1  cleanup-git-history.ps1  component-templates.js  create-component.js  force-cleanup-git.ps1  generate-components-batch.js  generate-signing-key.sh  lint-components.js  model-versioning.js  performance-profiling.js  pre-commit-hook.js  setup-git-hooks.js  setup-git-hooks.ps1  setup-models.js  update-models.js  validate-accessibility-compliance.js  validate-commit.ps1  validate-commit.sh  validate-gitignore.js  verify-clean-repo.ps1  verify-models.js  verify-repo-simple.ps1
src/: App.css  App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  performance_profiler.rs
src-tauri/src/application/: ai_credential_commands.rs  ai_credential_commands_test.rs  ai_provider.rs  ai_provider_manager.rs  commands.rs  hybrid_rag_service.rs  mod.rs  model_commands.rs  services.rs  use_cases.rs
src-tauri/src/commands/: ai_blocks.rs  database_optimization.rs  hybrid_rag.rs  mod.rs  model_versioning.rs  updater.rs
src-tauri/src/core/: entities.rs  local_ai_engine.rs  mod.rs  transitions.rs  value_objects.rs
src-tauri/src/infrastructure/: bedrock_provider.rs  credential_manager.rs  database.rs  filesystem.rs  gemini_provider.rs  local_provider.rs  mod.rs  model_manager.rs
src-tauri/src/infrastructure/db_layer/: ai_blocks_repository.rs  connection.rs  connection_manager.rs  migrations.rs  mod.rs  query_optimizer.rs  query_optimizer.test.rs  repositories.rs  repositories_test.rs
src-tauri/src/services/: ai_blocks_service.rs  database_optimization_service.rs  mod.rs
(+133 files in other folders)
