[workspace]
members = [
    "src-tauri",
    "local-model-sidecar"
]
resolver = "2"

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
