[package]
name = "local-model-sidecar"
version = "0.1.0"
edition = "2021"
description = "Local AI model sidecar process for Project Yarn"
authors = ["Project Yarn Team"]

[[bin]]
name = "local-model-sidecar"
path = "src/main.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
# Serialization for JSON IPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Candle ML framework for inference (stable versions)
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
# HuggingFace tokenizers and hub for model loading
tokenizers = "0.13"
hf-hub = "0.3"
# Error handling
anyhow = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Additional utilities for model serving
once_cell = "1.19"
