[package]
name = "project-yarn"
version = "0.1.0"
description = "AI-native IDE for Documents"
authors = ["Project Yarn Team"]
repository = "https://github.com/project-yarn/project-yarn"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "shell-open", "os-all", "path-all", "fs-all", "test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
keyring = "2.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
# Error handling and logging for local-ai-engine
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# Testing dependencies
tempfile = "3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "project-yarn"
path = "src/main.rs"
