[package]
name = "project-yarn"
version = "0.1.0"
description = "AI-native IDE for Documents"
authors = ["Project Yarn Team"]
repository = "https://github.com/project-yarn/project-yarn"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[dependencies]
tauri = { version = "1.0", features = [ "shell-open", "os-all", "path-all", "fs-all", "test", "updater"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
keyring = "2.0"
uuid = { version = "1.18", features = ["v4"] }
chrono = "0.4"
# Error handling and logging for local-ai-engine
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
# HTTP client for model downloads
reqwest = { version = "0.11", features = ["json", "stream"] }
# Async utilities for streaming
futures-util = "0.3"
# Error handling with derive macros
thiserror = "1.0"
# Cryptographic operations for model verification
sha2 = "0.10"
hex = "0.4"
# Configuration and serialization
toml = "0.9"
# File system operations
fs_extra = "1.3"
# Progress reporting
indicatif = "0.17"
# Testing dependencies
tempfile = "3.0"
# File system watcher for background monitoring
notify = "6.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "project-yarn"
path = "src/main.rs"
